# phonemica

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: simple_example.rs
src/: download.rs  lib.rs  suffix_prefix.rs  types.rs  wasm.rs  wasm_resources.rs
src/phonemizer/: context.rs  dictionaries.rs  error.rs  impl.rs  ipa.rs  mod.rs  rules.rs  stress.rs  tokenizer.rs
tests/: espeak_ng.rs  espeak_ng_test_data.json  integration_tests.rs  wasm_tests.rs
